--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/viniciusls/nodejs-lambda-sns#readme",
   "dependencies": {
     "aws-sdk": "^2.820.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.16.0",
     "eslint-config-rallycoding": "^3.2.0",
     "ini": "^2.0.0"
