--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.16.0",
     "eslint-config-rallycoding": "^3.2.0",
-    "ini": "^2.0.0"
+    "ini": "^2.0.0",
+    "request": "^2.88.2",
+    "telegraf": "^3.38.0"
   }
 }
